...
    <string name="app_name">Check&amp;Share</string>
    <string name="action_settings">Settings</string>
    <string name="image_path">kubota</string>

    <!-- Main -->
    <string name="main_enter_store_button">เข้าระบบร้าน</string>
    <string name="main_ofline_button">เริ่มงานใหม่แบบไม่มีอินเตอร์เน็ต</string>
    <string name="main_button_yes">ใช่</string>
    <string name="main_button_no">ไม่ใช่</string>


    <!-- Login -->
    <string name="login_store_title">เข้าสู่ระบบร้าน</string>
...
    <string name="login_invalid_username_password">กรุณากรอกชื่อผู้ใช้และรหัสผ่านให้ครบ</string>
    <string name="login_before_submit">กรุณาล็อกอินเข้าสู่ระบบร้านก่อนส่งงาน</string>
    <string name="login_default_error_message">เข้าสู่ระบบไม่สำเร็จ กรุณาลองใหม่อีกครั้ง</string>

    <!-- UnfinishTask -->ServiceFragment
    <string name="unfinish_task">งานที่ยังทำไม่เสร็จ</string>
    <string name="unfinish_task_button_start_new_job">เริ่มงานใหม่</string>
    <string name="unfinish_task_unsend">งานที่เสร็จแล้วแต่ยังค้างส่ง</string>
    <string name="unfinish_task_confirm_delete">คุณต้องการลบหรือไม่?</string>
    <string name="unfinish_task_number">งานที่</string>


    <!-- Service -->
...
    <string name="service_step_3">ขั้นตอนที่3 : รับรองงาน</string>
    <string name="service_step_4">ขั้นตอนที่4 : แบบสอบถาม</string>
    <string name="service_step_5">ขั้นตอนที่5 : ยืนยันการส่งข้อมูล</string>

    <string name="service_button_save">บันทึกข้อมูล</string>
    <string name="service_button_previous">ส่วนก่อนหน้านี้</string>
    <string name="service_button_next">ส่วนถัดไป</string>
    <string name="service_button_confirm">ยืนยัน</string>
    <string name="service_button_cancel">ยกเลิก</string>
    <string name="service_button_ok">ตกลง</string>

    <string name="service_title_usage_info">ข้อมูลการใช้งาน</string>
    <string name="service_title_customer_info">ข้อมูลลูกค้าเบื้องต้น</string>
    <string name="service_title_customer_sign">ลงชื่อลูกค้า</string>
    <string name="service_title_customer_sign_edit">ลงชื่อลูกค้าตัวบรรจง</string>
    <string name="service_title_technician_sign">ลงชื่อช่างบริการ</string>
    <string name="service_title_technician_sign_edit">ลงชื่อช่างบริการตัวบรรจง</string>
    <string name="service_title_confirm_submittion">ยืนยันการส่งข้อมูล</string>

    <string name="service_radio_caption_owner">เจ้าของรถ</string>
    <string name="service_radio_caption_user">ผู้ใช้รถ</string>

    <string name="service_select_title">เลือกรุ่นรถ</string>

    <string name="service_hint_job_type">ประเภทงาน</string>
    <string name="service_hint_product">สินค้า</string>
...

    <string name="service_image_1_engine_number">หมายเลขเครื่อง</string>
    <string name="service_image_2_working_hours">ชั่วโมงการทำงาน</string>
    <string name="service_image_3_machine">ช่างกับรถลูกค้า</string>
    <string name="service_image_4_customer_with_machine">ลูกค้ากับรถลูกค้า</string>

    <string name="service_confirm_suggesttion">ข้าพเจ้าได้รับคำแนะนำเป็นที่เข้าใจอย่างดีแล้ว</string>
    <string name="service_confirm_give_suggesttion">ข้าพเจ้าได้ให้คำแนะนำแก่ลูกค้าให้เป็นที่เข้าใจอย่างดีแล้ว</string>

    <string name="service_hint_total_cost">ยอดค่าอะไหล่</string>
    <string name="service_hint_signature">ลายมือชื่อ</string>
    <string name="service_hint_signature_edit">ลงชื่อตัวบรรจง</string>
    <string name="service_hint_date">วว/ดด/ปปปป</string>
    <string name="service_hint_customer_name">ชื่อลูกค้า</string>
...
    <string name="survey_submit_confirm_title">ยืนยันส่งแบบสอบถาม</string>
    <string name="survey_finish_message">จบการทำงาน ขอบคุณค่ะ</string>
    <string name="title_activity_service">ServiceActivity</string>

    <!--Sign pad-->
    <string name="sign_pad_clear_button">ลบทั้งหมด</string>
    <string name="sign_pad_save_button">บันทึกลายมือชื่อ</string>
    <string name="sign_pad_total_sparepart_cost">สรุปยอดค่าอะไหล่</string>
    <string name="sign_pad_customer_signature">ลายมือชื่อลูกค้า</string>
    <string name="sign_pad_technician_signature">ลายมือชื่อผู้ให้บริการ</string>
    <string name="sign_pad_remark">หมายเหตุ</string>
    <string name="sign_pad_not_complete">กรุณาลงลายมือชื่อให้เรียบร้อยก่อนบันทึก</string>

...
