...
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"/>

        <LinearLayout
            android:id="@+id/navigationControleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="7dp"
                android:textSize="15dp"
...
                    android:text="@string/service_button_previous"
                    android:textColor="@color/button_white_text_selector"
                    android:background="@drawable/button_white_border_selector"
                    android:enabled="true"></Button>

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginLeft="10dp"
...
